--- a/style.css
+++ b/style.css
@@ -1,130 +1,70 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.roboto-thin {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  .roboto-thin-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-  }
-  
-  .roboto-light {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .roboto-light-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .roboto-regular-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .roboto-medium {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .roboto-medium-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-  }
-  
-  .roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .roboto-bold-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
-  
-  .roboto-black {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-  
-  .roboto-black-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-  }
+body {
+  margin: 0;
+  padding: 0;
+}
 
-  .container{
-    width: 500px;
-    margin: 0 auto;
-    padding: 1rem;
-  }
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 1rem;
+}
 
-  h1{
-    text-align: center;
-  }
+h1 {
+  text-align: center;
+}
 
-  form{
+form {
+  display: flex;
+  flex-direction: column;
+}
 
-    display: flex;
-    flex-direction: column;
-    gap: 1.2rem;
-  }
+.form-control {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+}
 
-  .form-control{
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
+label {
+  margin-bottom: 0.3rem;
+  font-weight: bold;
+}
 
-  input,textarea{
+input[type="text"],
+input[type="email"],
+textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
 
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 1rem;
-  }
+.error-message {
+  color: #e21111;
+  margin-top: 5px;
+}
 
-  .error-message{
+button[type="submit"] {
+  background-color: #2756af;
+  color: white;
+  padding: 0.7rem;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: 0.4s;
+}
 
-    color: #e21111;
-    margin-top: 0.2rem;
-  }
+button[type="submit"]:hover {
+  background-color: #132f63;
+}
 
-  .botao{
-    background-color: #2756af;
-    padding: 0.6rem 1.2rem;
-    border-radius: 5px;
-    font-size: 1,2rem;
-    cursor: pointer;
-    transition: 0.4s;
-  }
-
-  .botao:hover{
-
-    background-color: #132f63;
-
-  }
-  
+/* Estilo para inputs com erro */
+.form-control.error input,
+.form-control.error textarea {
+  border-color: #e21111;
+}
